# seat-booking-management-system-backend

./: Makefile  README.md  requirements.txt  schema.yml  setup.cfg
booking/: admin.py  models.py  serializers.py  urls.py  views.py
booking/migrations/: 0001_initial.py  0002_alter_booking_unique_together_booking_unique_booking.py  0003_remove_booking_unique_booking_booking_unique_booking.py  0004_remove_booking_unique_booking_and_more.py  0005_remove_booking_unique_booking_per_time_slot_and_more.py  0006_remove_booking_unique_booking_per_user_and_more.py  0007_remove_booking_unique_booking_per_user_and_more.py  0008_remove_booking_unique_booking_per_time_slot_and_more.py  0009_remove_booking_unique_booking_per_time_slot_and_more.py  0010_alter_venue_name.py  0011_seat_unique_seat_per_venue.py
booking/tests/: __init__.py  test_model.py  test_viewset.py
config/: settings.py  urls.py
fixtures/: data.json
