[metadata]
name = Seat Booking Management System Backend
version = 0.1.0
description = A Django Rest Framework project
author = Riajul Kashem
author_email = riajulkashem@gmail.com

[options]
packages = find:
python_requires = >=3.12
install_requires =
    Django>=5.0
    djangorestframework>=3.13
    black
    flake8
    mypy

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    env,
    venv,
    build,
    dist,
    config/settings.py,
    migrations

[black]
line-length = 88
target-version = ['py38']
exclude = 
    .git,
    __pycache__,
    env,
    venv,
    build,
    dist,
    migrations

[mypy]
python_version = 3.8
warn_unused_configs = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
ignore_missing_imports = True
exclude = 
    ^migrations/
    ^.*/migrations/.*$

[coverage:run]
branch = True
omit =
    */tests/*
    */migrations/*
    env/*
    venv/*
